# velsera-exercise

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
experiments/: finetuning.ipynb
infra/: ecr.tf  main.tf  secret-manager.tf
infra/backend/: main.tf
infra/eks/: eks.tf  igw.tf  nat.tf  nodes.tf  routes.tf  subnets.tf  variables.tf  vpc.tf
src/velsera/finetuning/: fine_tuner.py  main.py  preprocess.py  prompts.py  reporter.py
src/velsera/preprocessing/: __init__.py  loader.py  main.py  parser.py
src/velsera/utils/: files.py  loggers.py  model_utils.py
src/velsera/webserver/: app.py
src/velsera/webserver/routes/: predictions.py
tests/utils/: test_files.py
