[project]
name = "velsera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W"]

[project.optional-dependencies]
dev = ["pytest", "pandas", "pyarrow"]
