[project]
name = "velsera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "fastapi[standard]>=0.115.12",
    "pandas>=2.2.3",
    "peft>=0.15.2",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "scikit-learn>=1.6.1",
    "transformers>=4.51.3",
    "trl>=0.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W"]

[project.optional-dependencies]
dev = ["pytest", "pandas", "pyarrow"]
